[gd_scene load_steps=7 format=3 uid="uid://ca8garrofkp8a"]

[ext_resource type="Script" path="res://scripts/spawned_minion.gd" id="1_wewc0"]
[ext_resource type="Resource" uid="uid://b1l2p0nylauhh" path="res://Resources/Spells/summon_fire_minion.tres" id="2_ww8wj"]
[ext_resource type="Texture2D" uid="uid://ctywuei78l3ea" path="res://assets/sprites/summon.png" id="3_3v5fm"]
[ext_resource type="Script" path="res://scripts/enemytexture.gd" id="4_0rtyk"]
[ext_resource type="PackedScene" uid="uid://bi6cchqqvrgrd" path="res://scenes/battle/minion_health_component.tscn" id="5_5hg8r"]
[ext_resource type="Script" path="res://scripts/damage_component.gd" id="6_erime"]

[node name="SummonedsMinion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 550.0
offset_top = 338.0
offset_right = -293.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wewc0")
minion = ExtResource("2_ww8wj")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.5
texture = ExtResource("3_3v5fm")
script = ExtResource("4_0rtyk")

[node name="MinionHealthComponent" parent="VBoxContainer" instance=ExtResource("5_5hg8r")]
layout_mode = 2
size_flags_vertical = 3

[node name="DamageComponent" type="Node" parent="."]
script = ExtResource("6_erime")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="minion_defeated" from="VBoxContainer/MinionHealthComponent" to="." method="_on_minion_health_component_minion_defeated"]
